--- a/src/componets/ProductList.css
+++ b/src/componets/ProductList.css
@@ -7,3 +7,21 @@ a:-webkit-any-link {
     text-decoration: none;
 }
 
+.product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+
+.card {
+  box-sizing: border-box;
+}
+
+.cuadro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+
+}
